GMM_Main/src/objects/In_direct__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_Active_Until__c</fullName>
        <label>CCR Active Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_4__c</fullName>
        <label>DUNS+4</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DUNS Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <inlineHelpText>DUNS number must be entered for your organization in order to submit an application. If needed please contact Dun &amp; Bradstreet at http://www.dnb.com/get-a-duns-number.html to register for a DUNS number.</inlineHelpText>
        <label>DUNS #</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please Specify other details here</inlineHelpText>
        <label>Other Rate Status Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descriptions__c</fullName>
        <inlineHelpText>Please provide</inlineHelpText>
        <label>Other Issuing Agency Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_have_an_Indirect_Cost_Rate__c</fullName>
        <inlineHelpText>If you have a current, approved indirect cost rate, it must be reported to CNCS &amp; if you intend to request a budget including indirect costs. This info will be used in all award negotiation/reviews until it&apos;s superseded by a new approved rate or expires.</inlineHelpText>
        <label>Do you have an Indirect Cost Rate?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <label>Extended?</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Formula_Rate_Percent__c</fullName>
        <formula>IF(ISPICKVAL(Rate_Type__c, &apos;10%Modified Total Direct Cost (MTDC)&apos;),0.1,

Null)</formula>
        <label>Formula Rate Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_this_your_default_cost_rate__c</fullName>
        <label>Is this your default cost rate?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issuing_Agency__c</fullName>
        <label>Issuing Agency</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Health and Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of HUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Veteran Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment Protection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Science Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Services Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Regulatory Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Personnel Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Department of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Agency for International Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NCCC_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_d_b_a__c</fullName>
        <label>Name (d.b.a)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Characteristics__c</fullName>
        <label>Organization Characteristics</label>
        <picklist>
            <picklistValues>
                <fullName>Governor&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission/Alt Admin Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Affiliate of National Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statewide Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Action Agency/Prog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Government Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Organization (NGO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non-Profit (Multi-State)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Native American Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational/Technical College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historically Black College/Univ. (HBCU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic-Serving College/Univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribally controlled college/Univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Agency on Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chamber of Commerce/Bus. Assn.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Civic Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Management Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Inc. Senior Corps Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-based organization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Indirect Cost Rate</relationshipLabel>
        <relationshipName>Indirect_Cost_Rate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Internal Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Designation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_s_Email__c</fullName>
        <label>Organization&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rate_Base__c</fullName>
        <label>Rate Base</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Percent__c</fullName>
        <label>Rate Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Status__c</fullName>
        <label>Rate Status</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <inlineHelpText>Select federally negotiated for rates issues by fed. agencies. Select state negotiated for rates issued by state. If you&apos;re eligible &amp; have notified a federal or state agency of your intent to use 10% of MTDC rate, select 10% of MTDC.</inlineHelpText>
        <label>Rate Type</label>
        <picklist>
            <controllingField>Do_you_have_an_Indirect_Cost_Rate__c</controllingField>
            <picklistValues>
                <fullName>FederallyNegotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Cost Allocation Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%Modified Total Direct Cost (MTDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Approved Cost Allocation Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_of_FringeBenefits__c</fullName>
        <label>Treatment of Fringe Benefits</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_of_Paid_Absences__c</fullName>
        <label>Treatment of Paid Absences</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VISTA_TIN__c</fullName>
        <label>VISTA TIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_url__c</fullName>
        <label>Website (url)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Indirect Cost Rate Info</label>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Indirect  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indirect Cost Rate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Base</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 
(ISBLANK(Rate_Base__c ))))</errorConditionFormula>
        <errorDisplayField>Rate_Base__c</errorDisplayField>
        <errorMessage>“Rate Base” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Effect</fullName>
        <active>true</active>
        <description>Agency_Approved_Cost_Allocation_Effective from</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 
(ISBLANK(Effective_From__c ))))</errorConditionFormula>
        <errorDisplayField>Effective_From__c</errorDisplayField>
        <errorMessage>“Effective From” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Extended</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 
(ISBLANK(Text(Extended__c )))))</errorConditionFormula>
        <errorDisplayField>Extended__c</errorDisplayField>
        <errorMessage>“Extended” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Fringe</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 
(ISBLANK(Treatment_of_FringeBenefits__c ))))</errorConditionFormula>
        <errorDisplayField>Treatment_of_FringeBenefits__c</errorDisplayField>
        <errorMessage>“Treatment of FringeBenefits” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Issue</fullName>
        <active>true</active>
        <description>validation rule for Issuing Agency</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 
(ISBLANK(Text(Issuing_Agency__c )))))</errorConditionFormula>
        <errorDisplayField>Issuing_Agency__c</errorDisplayField>
        <errorMessage>“Issuing Agency” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Paid</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 

(ISBLANK(Treatment_of_Paid_Absences__c ))))</errorConditionFormula>
        <errorDisplayField>Treatment_of_Paid_Absences__c</errorDisplayField>
        <errorMessage>“Treatment of Paid Absences” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Percent</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 

(ISBLANK(Rate_Percent__c ))))</errorConditionFormula>
        <errorDisplayField>Rate_Percent__c</errorDisplayField>
        <errorMessage>“Rate Percent” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Plan</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 
(ISBLANK(Effective_To__c ))))</errorConditionFormula>
        <errorDisplayField>Effective_To__c</errorDisplayField>
        <errorMessage>“Effective To” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Approved_Cost_Allocation_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c, &apos;Agency Approved Cost Allocation Plan&apos;), 
OR( 
(ISBLANK(Text(Rate_Status__c )))))</errorConditionFormula>
        <errorDisplayField>Rate_Status__c</errorDisplayField>
        <errorMessage>“Rate Status” is required when the rate type is “Agency Approved Cost Allocation Plan.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_fields_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Do_you_have_an_Indirect_Cost_Rate__c , &apos;Yes&apos;), 
OR( 
(ISBLANK( Effective_From__c )), 
(ISBLANK( Effective_To__c ))))</errorConditionFormula>
        <errorDisplayField>Do_you_have_an_Indirect_Cost_Rate__c</errorDisplayField>
        <errorMessage>Effective from and to fields should be required as Indirect cost rate is &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_fields_should_be_left_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Do_you_have_an_Indirect_Cost_Rate__c , &apos;No&apos;),
 OR(
   NOT(ISBLANK( Effective_From__c )),
   NOT(ISBLANK( Effective_To__c ))))</errorConditionFormula>
        <errorDisplayField>Effective_From__c</errorDisplayField>
        <errorMessage>Effective from and to fields should be blank as you dont have Indirect cost rate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_cant_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Status__c , &apos;Other&apos;) , 
ISBLANK( Description__c ) )</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>If you have selected &quot;Other&quot; in the Rate status, Please provide the description.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_To_grater_than_Effective_From</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_From__c &gt;  Effective_To__c</errorConditionFormula>
        <errorDisplayField>Effective_To__c</errorDisplayField>
        <errorMessage>The “Effective To” date must be greater than the “Effective From” date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Issuing_agency</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Issuing_Agency__c , &apos;Other&apos;) ,
 ISBLANK( Descriptions__c ) )</errorConditionFormula>
        <errorDisplayField>Descriptions__c</errorDisplayField>
        <errorMessage>Please provide description when &quot;issuing agency &quot; is selected as &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_cost_information</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Do_you_have_an_Indirect_Cost_Rate__c , &apos;No&apos;) ,
 OR(
 NOT(ISBLANK( Description__c ) ),
 NOT(ISBLANK( Descriptions__c ) ),
 NOT(ISBLANK(  Rate_Base__c  ) ),
NOT(ISBLANK( Rate_Percent__c )),
NOT(ISBLANK(  Treatment_of_FringeBenefits__c ) ),
NOT(ISBLANK(  Treatment_of_Paid_Absences__c ) )))</errorConditionFormula>
        <errorDisplayField>Do_you_have_an_Indirect_Cost_Rate__c</errorDisplayField>
        <errorMessage>You cannot enter information for Indirect cost rate type as &quot;NO&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_Base</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
OR(ISPICKVAL(Rate_Type__c,&apos;FederallyNegotiated&apos;),
 ISPICKVAL(Rate_Type__c,&apos;State Negotiated&apos;),
 ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)),
 ISBLANK(Rate_Base__c) )</errorConditionFormula>
        <errorDisplayField>Rate_Base__c</errorDisplayField>
        <errorMessage>Provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_percent</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR
( ISPICKVAL(Rate_Type__c, &apos;FederallyNegotiated&apos;),
ISPICKVAL(Rate_Type__c, &apos;State Negotiated&apos;),  
ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)
),


AND( ISBLANK(Rate_Percent__c) )

)</errorConditionFormula>
        <errorDisplayField>Rate_Percent__c</errorDisplayField>
        <errorMessage>Please enter the percentage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_Percent_Ten</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Rate_Type__c, &apos;10%Modified Total Direct Cost (MTDC)&apos;)  ,ISCHANGED(Rate_Percent__c))</errorConditionFormula>
        <errorDisplayField>Rate_Percent__c</errorDisplayField>
        <errorMessage>The rate percent must be “10” if “10%Modified Total Direct Cost (MTDC)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Treatment_of_FringeBenefits</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
OR(ISPICKVAL(Rate_Type__c,&apos;FederallyNegotiated&apos;),
 ISPICKVAL(Rate_Type__c,&apos;State Negotiated&apos;),
 ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)),
 ISBLANK(Rate_Base__c) )</errorConditionFormula>
        <errorDisplayField>Treatment_of_FringeBenefits__c</errorDisplayField>
        <errorMessage>Provide the information</errorMessage>
    </validationRules>
</CustomObject>